kubernetes/mini/core/monitoring/kube-prometheus-stack/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-prometheus
spec:
  endpointSelector:
    matchLabels:
      monitoring.home.arpa/prometheus: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: "prometheus"
